[gd_scene load_steps=7 format=3 uid="uid://bcdqbop6fav0y"]

[ext_resource type="Script" path="res://main/debug.gd" id="1_ak10h"]
[ext_resource type="FontFile" uid="uid://8bi3r55ex5c3" path="res://mats/font/UbuntuMono-B.ttf" id="2_eam54"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e1wtv"]
content_margin_left = 6.0
content_margin_top = 6.0
content_margin_right = 6.0
content_margin_bottom = 6.0
bg_color = Color(0.0627451, 0.0627451, 0.0627451, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tcmu3"]
content_margin_left = 6.0
content_margin_top = 6.0
content_margin_right = 6.0
content_margin_bottom = 6.0
bg_color = Color(0.956863, 0.956863, 0.956863, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_whrdm"]
content_margin_left = 6.0
content_margin_top = 6.0
content_margin_right = 6.0
content_margin_bottom = 6.0
bg_color = Color(0.956863, 0.956863, 0.956863, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ug4vn"]
content_margin_left = 6.0
content_margin_top = 6.0
content_margin_right = 6.0
content_margin_bottom = 6.0
bg_color = Color(0.956863, 0.956863, 0.956863, 1)
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[node name="Debug" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ak10h")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="MarginContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_colors/font_color = Color(0.0627451, 0.0627451, 0.0627451, 1)
theme_override_font_sizes/font_size = 20
text = "Debug"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Top" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Back" type="Button" parent="MarginContainer/VBoxContainer/Top"]
layout_mode = 2
text = " < Vissza "

[node name="Space" type="Control" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="Center" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer/Center"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 1.25

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Center/PanelContainer"]
layout_mode = 2

[node name="Code" type="PanelContainer" parent="MarginContainer/VBoxContainer/Center/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_e1wtv")

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/Center/PanelContainer/VBoxContainer/Code"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Center/PanelContainer/VBoxContainer/Code/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("2_eam54")
theme_override_font_sizes/font_size = 15

[node name="Copy" type="Button" parent="MarginContainer/VBoxContainer/Center/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "Copy"

[node name="Space2" type="Control" parent="MarginContainer/VBoxContainer/Center"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="Data" type="PanelContainer" parent="MarginContainer/VBoxContainer/Center"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Center/Data"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="TEVK" type="PanelContainer" parent="MarginContainer/VBoxContainer/Center/Data/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_tcmu3")

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Center/Data/VBoxContainer/TEVK"]
layout_mode = 2

[node name="Key" type="Label" parent="MarginContainer/VBoxContainer/Center/Data/VBoxContainer/TEVK/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.0627451, 0.0627451, 0.0627451, 1)
theme_override_fonts/font = ExtResource("2_eam54")
theme_override_font_sizes/font_size = 15
text = "TEVK:"
horizontal_alignment = 1

[node name="Value1" type="Label" parent="MarginContainer/VBoxContainer/Center/Data/VBoxContainer/TEVK/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.0627451, 0.0627451, 0.0627451, 1)
theme_override_fonts/font = ExtResource("2_eam54")
theme_override_font_sizes/font_size = 15

[node name="PIR" type="PanelContainer" parent="MarginContainer/VBoxContainer/Center/Data/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_whrdm")

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Center/Data/VBoxContainer/PIR"]
layout_mode = 2

[node name="Key" type="Label" parent="MarginContainer/VBoxContainer/Center/Data/VBoxContainer/PIR/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.0627451, 0.0627451, 0.0627451, 1)
theme_override_fonts/font = ExtResource("2_eam54")
theme_override_font_sizes/font_size = 15
text = "PIR:"
horizontal_alignment = 1

[node name="Value2" type="Label" parent="MarginContainer/VBoxContainer/Center/Data/VBoxContainer/PIR/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.0627451, 0.0627451, 0.0627451, 1)
theme_override_fonts/font = ExtResource("2_eam54")
theme_override_font_sizes/font_size = 15

[node name="Nev" type="PanelContainer" parent="MarginContainer/VBoxContainer/Center/Data/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_whrdm")

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Center/Data/VBoxContainer/Nev"]
layout_mode = 2

[node name="Key" type="Label" parent="MarginContainer/VBoxContainer/Center/Data/VBoxContainer/Nev/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.0627451, 0.0627451, 0.0627451, 1)
theme_override_fonts/font = ExtResource("2_eam54")
theme_override_font_sizes/font_size = 15
text = "Közterület név:"
horizontal_alignment = 1

[node name="Value3" type="Label" parent="MarginContainer/VBoxContainer/Center/Data/VBoxContainer/Nev/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.0627451, 0.0627451, 0.0627451, 1)
theme_override_fonts/font = ExtResource("2_eam54")
theme_override_font_sizes/font_size = 15

[node name="Jelleg" type="PanelContainer" parent="MarginContainer/VBoxContainer/Center/Data/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_whrdm")

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Center/Data/VBoxContainer/Jelleg"]
layout_mode = 2

[node name="Key" type="Label" parent="MarginContainer/VBoxContainer/Center/Data/VBoxContainer/Jelleg/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.0627451, 0.0627451, 0.0627451, 1)
theme_override_fonts/font = ExtResource("2_eam54")
theme_override_font_sizes/font_size = 15
text = "Közterület jelleg:"
horizontal_alignment = 1

[node name="Value4" type="Label" parent="MarginContainer/VBoxContainer/Center/Data/VBoxContainer/Jelleg/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.0627451, 0.0627451, 0.0627451, 1)
theme_override_fonts/font = ExtResource("2_eam54")
theme_override_font_sizes/font_size = 15

[node name="Hazszam" type="PanelContainer" parent="MarginContainer/VBoxContainer/Center/Data/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_ug4vn")

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Center/Data/VBoxContainer/Hazszam"]
layout_mode = 2

[node name="Key" type="Label" parent="MarginContainer/VBoxContainer/Center/Data/VBoxContainer/Hazszam/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.0627451, 0.0627451, 0.0627451, 1)
theme_override_fonts/font = ExtResource("2_eam54")
theme_override_font_sizes/font_size = 15
text = "Házszám:"
horizontal_alignment = 1

[node name="Value5" type="Label" parent="MarginContainer/VBoxContainer/Center/Data/VBoxContainer/Hazszam/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.0627451, 0.0627451, 0.0627451, 1)
theme_override_fonts/font = ExtResource("2_eam54")
theme_override_font_sizes/font_size = 15

[node name="Space3" type="Control" parent="MarginContainer/VBoxContainer/Center"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Center"]
layout_mode = 2

[node name="LeftButton" type="Button" parent="MarginContainer/VBoxContainer/Center/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
disabled = true
text = "<"

[node name="TotalNumber" type="Label" parent="MarginContainer/VBoxContainer/Center/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.0627451, 0.0627451, 0.0627451, 1)
theme_override_font_sizes/font_size = 20
text = "0/0"
horizontal_alignment = 1

[node name="RightButton" type="Button" parent="MarginContainer/VBoxContainer/Center/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
disabled = true
text = ">"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Top/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Center/PanelContainer/VBoxContainer/Copy" to="." method="_on_copy_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Center/HBoxContainer/LeftButton" to="." method="_on_left_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Center/HBoxContainer/RightButton" to="." method="_on_right_button_pressed"]
